# Echo-Desktop

./: .gitignore  README.md  main.py  pyproject.toml
app/api/: routes.py  websocket.py
app/config/: settings.py
app/core/: clipboard.py  database.py  discovery.py  file_handler.py  notifications.py
app/tui/: app.py
app/tui/screens/: files.py  home.py  settings.py
app/tui/widgets/: file_browser.py  notification.py
tests/: test_api.py
