[project]
name = "echo-desktop"
version = "0.1.0"
description = "Terminal-based companion to the Echo mobile app, providing a local bridge between your PC and phone."
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Echo Team", email = "example@example.com"}
]
dependencies = [
    "textual>=0.46.0",
    "rich>=13.7.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "pyperclip>=1.11.0",
    "aiofiles>=23.2.1",
    "watchdog>=3.0.0",
    "tinydb>=4.8.0",
    # Future dependencies (commented out for now)
    # "zeroconf>=0.131.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=5.0.0",
    "black>=24.1.0",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "httpx>=0.27.0",  # For FastAPI testing
]

[project.scripts]
echo-desktop = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
include = ["main.py"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
